# ba-razor

./: .gitignore  README.md  format_parser.py  model.py  momotalk.py  process_all.sh  pyproject.toml  razor.py  rename_utils.py  requirements.txt  utils.py
.github/workflows/: ci.yml
docs/: BaExcel.md
functions/: amend.py  favor_scenario.py  group_scenario.py  main_scenario.py  momotalk.py  rename.py  scenario.py
